--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrations": "./node_modules/.bin/sequelize db:migrate",
-    "undo-last-migration": "node_modules/.bin/sequelize db:migrate:undo"
+    "undo-last-migration": "node_modules/.bin/sequelize db:migrate:undo",
+    "seeds": "./node_modules/.bin/sequelize db:seed:all"
   },
   "repository": {
     "type": "git",
