--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node ./src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrations": "./node_modules/.bin/sequelize db:migrate",
     "undo-last-migration": "node_modules/.bin/sequelize db:migrate:undo",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/ferbihu/start2impact-test#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
